[package]
name = "photon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
csv = "1.1"
inventory = "0.3.1"
main_error = "0.1.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rinfluxdb = "0.2.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
toml = "0.5.9"
tracing = "0.1"
tracing-subscriber = "0.2"
zip = "0.6.2"
