[package]
name = "rte-refresh-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.21", features = ["derive"] }
kube = { version = "0.74.0", features = ["config", "runtime"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["macros"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
thiserror = "1.0.35"
